--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
-    background: url(../../../a/landingPage/header.jpg) no-repeat center center fixed;
+    background: url(../header.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
